Fix counter showing on mobile

--- a/styles/sass/ui/formstack.scss
+++ b/styles/sass/ui/formstack.scss
@@ -23,6 +23,7 @@
 }
 
 .fsHidden,
+.fsCounter,
 .hidden {
     display: none;
 }
